# packages/shared/openapi.json
@@ -801,6 +801,13 @@
           "to"
         ],
         "properties": {
+          "count_back": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "minimum": 0
+          },
           "from": {
             "type": "integer",
             "format": "int64"
